<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFF"
    tools:context="tim.com.br.poctimoam.LoginActivity">


    <TextView android:text="@string/sys_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivTim"
        android:src="@drawable/fundo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:hint="@string/login_hint"
        android:id="@+id/etLogin"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@color/fieldBackground"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPass"
        android:layout_below="@+id/etLogin"
        android:layout_alignLeft="@+id/etLogin"
        android:layout_alignStart="@+id/etLogin"
        android:layout_marginTop="44dp"
        android:hint="@string/password_hint"
        android:background="@color/fieldBackground"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:id="@+id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ff02376b"
        android:textColor="#FFFFFF"
        />




</RelativeLayout>
